samples/_failures_safe/1761726107_01c3d8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1c7184f7.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_1c7184f7.c:168:9: error: expected declaration or statement at end of input
  168 |         free(graph->matrix[i]);
      |         ^~~~
./samples/SAFE/__tmp_1c7184f7.c:168:9: error: expected declaration or statement at end of input
